third_party/rust/chromium_crates_io/vendor/zerocopy-0.7.35/tests/ui-stable/transmute-mut-dst-unsized.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-stable/transmute-mut-dst-unsized.rs:17:32
   |
17 | const DST_UNSIZED: &mut [u8] = transmute_mut!(&mut [0u8; 1]);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                |
   |                                doesn't have a size known at compile-time
   |                                required by a bound introduced by this call
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `AssertDstIsFromBytes`
  --> tests/ui-stable/transmute-mut-dst-unsized.rs:17:32
   |
17 | const DST_UNSIZED: &mut [u8] = transmute_mut!(&mut [0u8; 1]);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertDstIsFromBytes`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-stable/transmute-mut-dst-unsized.rs:17:32
   |
17 | const DST_UNSIZED: &mut [u8] = transmute_mut!(&mut [0u8; 1]);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                |
   |                                doesn't have a size known at compile-time
   |                                required by a bound introduced by this call
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `AssertDstIsAsBytes`
  --> tests/ui-stable/transmute-mut-dst-unsized.rs:17:32
   |
17 | const DST_UNSIZED: &mut [u8] = transmute_mut!(&mut [0u8; 1]);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertDstIsAsBytes`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-stable/transmute-mut-dst-unsized.rs:17:32
   |
17 | const DST_UNSIZED: &mut [u8] = transmute_mut!(&mut [0u8; 1]);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-stable/transmute-mut-dst-unsized.rs:17:32
   |
17 | const DST_UNSIZED: &mut [u8] = transmute_mut!(&mut [0u8; 1]);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by an implicit `Sized` bound in `MaxAlignsOf`
  --> src/macro_util.rs
   |
   | pub union MaxAlignsOf<T, U> {
   |                          ^ required by the implicit `Sized` requirement on this type parameter in `MaxAlignsOf`
   = note: this error originates in the macro `$crate::assert_align_gt_eq` which comes from the expansion of the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-stable/transmute-mut-dst-unsized.rs:17:32
   |
17 | const DST_UNSIZED: &mut [u8] = transmute_mut!(&mut [0u8; 1]);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by an implicit `Sized` bound in `transmute`
  --> $RUST/core/src/intrinsics.rs
   |
   |     pub fn transmute<Src, Dst>(src: Src) -> Dst;
   |                           ^^^ required by the implicit `Sized` requirement on this type parameter in `transmute`
   = note: this error originates in the macro `$crate::assert_size_eq` which comes from the expansion of the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-stable/transmute-mut-dst-unsized.rs:17:32
   |
17 | const DST_UNSIZED: &mut [u8] = transmute_mut!(&mut [0u8; 1]);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by an implicit `Sized` bound in `transmute_mut`
  --> src/macro_util.rs
   |
   | pub unsafe fn transmute_mut<'dst, 'src: 'dst, Src: 'src, Dst: 'dst>(
   |                                                          ^^^ required by the implicit `Sized` requirement on this type parameter in `transmute_mut`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
